[tool.poetry]
name = "fireball"
version = "0.1.0"
authors = ["fireball <huntzhan.dev@gmail.com>"]
license = "MIT"
description = ""
readme = "README.md"
repository = "https://github.com/huntzhan/fireball"
packages = [
    { include = "fireball" },
]

[tool.poetry.dependencies]
python = "^3.5"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
flake8 = { version = "^3.8.2", python = "^3.6" }
twine = { version = "^3.1.1", python = "^3.6" }

# CLI.
# [tool.poetry.scripts]
# fireball = "fireball:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
